--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,15 @@ environment:
   sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
+  cached_network_image: ^3.2.3
+  carousel_slider: ^4.2.1
+  dots_indicator: ^3.0.0
   flutter:
     sdk: flutter
+  flutter_staggered_grid_view: ^0.6.2
+  font_awesome_flutter: ^10.5.0
   google_nav_bar: ^5.0.6
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -18,3 +24,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
