--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   google_nav_bar: ^5.0.6
   intl: ^0.18.1
+  smooth_star_rating_null_safety: ^1.0.4+2
 
 dev_dependencies:
   flutter_lints: ^2.0.0
