--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,13 +9,18 @@ environment:
 dependencies:
   cached_network_image: ^3.2.3
   carousel_slider: ^4.2.1
+  custom_clippers: ^2.0.0
   dots_indicator: ^3.0.0
+  firebase_auth: ^4.7.1
+  firebase_core: ^2.15.0
   flutter:
     sdk: flutter
   flutter_staggered_grid_view: ^0.6.2
   font_awesome_flutter: ^10.5.0
   google_nav_bar: ^5.0.6
+  google_sign_in: ^6.1.4
   intl: ^0.18.1
+  shared_preferences: ^2.2.0
   smooth_star_rating_null_safety: ^1.0.4+2
 
 dev_dependencies:
